# axelar-evm-deployer

./: .env.example  .gitignore  Cargo.toml  Readme.md  abi-db.json  clippy.toml  register_chain_support.sh
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
artifacts/: SenderReceiver.json
cache/: solidity-files-cache.json
contracts/: SenderReceiver.sol
docs/: load-test-coverage.md
scripts/: vote_devnet_proposal.sh  vote_stagenet_proposal.sh
src/: cli.rs  config.rs  cosmos.rs  evm.rs  main.rs  preflight.rs  solana.rs  state.rs  sui.rs  types.rs  ui.rs  utils.rs
src/commands/: decode.rs  decode_evm_activity.rs  decode_sol_activity.rs  decode_sol_tx.rs  decode_tx.rs  deploy.rs  event_extractors.rs  init.rs  mod.rs  reset.rs  status.rs  test_gmp.rs  test_helpers.rs  test_its.rs  verifier_votes.rs  verifiers.rs
src/commands/decode_sol_tx/: format.rs
src/commands/load_test/: evm_sender.rs  evm_to_sol.rs  gmp.rs  helpers.rs  its_evm_to_sol.rs  its_evm_to_sol_with_data.rs  its_evm_to_xrpl.rs  its_sol_to_evm.rs  keypairs.rs  metrics.rs  mod.rs  resolve.rs  sol_sender.rs  sol_to_evm.rs  sustained.rs  verify.rs
src/commands/test_gmp/: destination.rs  mod.rs  relay.rs  source.rs
src/commands/test_its/: mod.rs  phase_a.rs  relay.rs
src/cosmos/: events.rs  rpc.rs
src/solana/: balance.rs  encoding.rs  its.rs  mod.rs  rpc.rs
src/steps/: config_edit.rs  cosmos_poll.rs  cosmos_query.rs  cosmos_tx.rs  deploy_gateway.rs  deploy_its.rs  deploy_upgradable.rs  evm_compat.rs  evm_deploy.rs  mod.rs  predict_address.rs  register_operators.rs  transfer_ownership.rs  wait_verifier_set.rs
