[package]
name = "axelar-evm-deployer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.6.3", features = ["provider-http", "signer-local", "network", "rpc-types", "contract"] }
clap = { version = "4.5.58", features = ["derive"] }
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
